<resources>
    <string name="app_name">HybridWatch</string>
    <string name="action_settings">Settings</string>
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning </string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="device">Device</string>
    <string name="no_device">&amp;lt;Select a device&amp;gt;</string>
    <string name="status">Status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="SerialNumberString">Serial Number :: </string>
    <string name="ManfName">Manufacturer Name :: </string>
    <string name="CertDataList">Cert Data List :: </string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">discoverCharacteristics</string>
    <string name="loading">"\tLoading..."</string>
    <string name="paired">paired</string>
    <string name="scan">Scan</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="Readbsl">Readbsl</string>
    <string name="writeHRMnoti">HrmNoti</string>
    <string name="discoverService">discover Remote LE Services</string>
    <string name="notification">registerNotification</string>
    <string name="notification1">sss</string>
    <string name="writeClientConfig">writeClientConfigDesc</string>
    <string name="writehrcp">writeControlPoint</string>
    <string name="readChar">readChar</string>
    <string name="Read0x2A29">Manufacturer Name</string>
    <string name="Read0x2A25">Serial Number</string>
    <string name="Read0x2A2A">Cert Data</string>
    <string name="WriteHRM">Write HRM</string>
    <string name="readDisValues">readDisValues</string>
    <string name="readHrsValues">readHrsValues</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName :: </string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="HeartRateMeasurementValue">HeartRateMeasurementValue</string>
    <string name="HeartRateValue">HeartRateValue :: </string>
    <string name="resetEE">Send Command</string>
    <string name="EnergyExpendedValue">EnergyExpendedValue :: </string>
    <string name="RR_Interval">RR_Interval</string>
    <string name="RR_IntervalValue">RR_IntervalValue :: </string>
    <string name="BodySensorLocationValue">BodySensorLocationValue</string>
    <string name="BodySensorLocation">Body Sensor Location :: </string>
    <string name="pair_or_unpair">Pair/Unpair</string>
    <string name="connect_or_disconnect">Connect/Disconnect</string>
    <string name="EnergyExpended">EnergyExpended</string>
    <string name="removeBond">Remove Bond</string>
    <string name="NotificationDisable">disNoti</string>
    <string name="popup_title">QUIT HRP Collector?</string>
    <string name="popup_message">Device Quit , Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="welcometogazella">Welcome to Gazella</string>
    <string name="createaccount">Join Watch</string>
    <string name="SignIn">Log In</string>
    <string name="StartmyGazella">Start my Gazella</string>
    <string name="RetrievePassword">Find password</string>
    <string name="Password">Password</string>
    <string name="Re_enterpassword">Re-enter password</string>
    <string name="VerificationCode">Verify Code</string>
    <string name="NextPic">Next</string>
    <string name="Personaliz">Personalizing</string>
    <string name="Howtouse">How to use</string>
    <string name="Activateyourband">Activate your band</string>
    <string name="OpenBluetooth">Please confirm the bluetooth is activated\nPress and hold the button until blue LED flashes</string>
    <string name="OpenBluetooth_type2">Please make sure the blue tooth on your mobile device is truned on.Tap the band watch face twice to turn on the bluetooth module on your band to begin sync,LED Indicator will keep flashing.</string>
    <string name="next">Next</string>
    <string name="XXXband">\'s band</string>
    <string name="SerialNumber">Serial Number</string>
    <string name="About">about</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="YourName">Your Name</string>
    <string name="YourNickname">Your nickname</string>
    <string name="Nameyourband">Name your band</string>
    <string name="information">Providing accurate information helps Watch to give you meaningful feedbacks.</string>
    <string name="Gender">Gender</string>
    <string name="Birthdates">Birthdates</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="year">Year</string>
    <string name="Month">Month</string>
    <string name="Day">  Day</string>
    <string name="Centimeter">Centimeter</string>
    <string name="Kilogram">Kg</string>
    <string name="Personalizing">Personalizing</string>
    <string name="Settingyourgenderto">Setting your gender to</string>
    <string name="Settingyourheight">Setting your height to </string>
    <string name="Settingyourweightto">Setting your weight to</string>
    <string name="complete">Done</string>
    <string name="Touchscreen">Touch screen</string>
    <string name="personalizingiscomplete">Thank you, personalization is completed</string>
    <string name="Userguidewidget">User guide widget</string>
    <string name="IncomingCallingAlert">Incoming Call Alert</string>
    <string name="Today">Today</string>
    <string name="steps">steps</string>
    <string name="Steps_title">Steps</string>
    <string name="Distance_title">Distance</string>
    <string name="Calories_title">Calories</string>
    <string name="ExerciseTime">Exercise</string>
    <string name="Activity">Activity</string>
    <string name="YouWalked">You walked</string>
    <string name="Youhavetrainedfor">You have trained for</string>
    <string name="m">m</string>
    <string name="Sleep">Sleep</string>
    <string name="youslept">You slept</string>
    <string name="hours">Hours</string>
    <string name="h">h</string>
    <string name="Bicycling">Bicycling</string>
    <string name="Running">Running</string>
    <string name="Record">Record</string>
    <string name="Mainpage">Main page</string>
    <string name="Statistics">Statistics</string>
    <string name="Achievement">Achievement</string>
    <string name="Settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="Edit">Edit</string>
    <string name="ExercisrRecord">Exercise Record</string>
    <string name="YouhaveRan">You have ran</string>
    <string name="distance">Distance</string>
    <string name="Kilometer">Km</string>
    <string name="stridelength">Stride length</string>
    <string name="Intensity">Intensity</string>
    <string name="Mild">Mild</string>
    <string name="TotalBurned">Total Burned</string>
    <string name="calories">Cal</string>
    <string name="MET">Calorie calculation is based on MET value standard</string>
    <string name="ExerciseEdit">Exercise Edit</string>
    <string name="Save">Save</string>
    <string name="ExerciseType">Exercise Type</string>
    <string name="ExerciseIntensity">Exercise Intensity</string>
    <string name="Walk">Walk</string>
    <string name="PowerWalk">Power Walk</string>
    <string name="Jogging">Jogging</string>
    <string name="Easy">Easy</string>
    <string name="Intensive">Intensive</string>
    <string name="ActivityEdit">Activity Edit</string>
    <string name="ActivityType">Activity Type</string>
    <string name="EIntensity">Exercise Intensity</string>
    <string name="StartTime">Start Time</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Duration">Duration</string>
    <string name="SleepRecord">Sleep Record</string>
    <string name="YouSlept">You slept</string>
    <string name="SleepGoal">Sleep Goal</string>
    <string name="SleepStartTime">Fell asleep in</string>
    <string name="TimeSlept">Time Slept</string>
    <string name="Awake">Awake</string>
    <string name="Time">Time</string>
    <string name="time">time</string>
    <string name="min">min</string>
    <string name="Times">Count</string>
    <string name="tims">times</string>
    <string name="lightsleep">Light sleep</string>
    <string name="deepsleep">Deep sleep</string>
    <string name="statistics">Statistics</string>
    <string name="Week">Week</string>
    <string name="BurnedCalorise">Burned Calories</string>
    <string name="ActivityTime">Activity Time</string>
    <string name="ExercisesTime">Exercise Time</string>
    <string name="Totalcalories">Total Calories</string>
    <string name="TotalExercisingtime">Total Exercising time</string>
    <string name="Totaldistance">Total Distance</string>
    <string name="Medal">Medal</string>
    <string name="Walkedthefarthest">Walked the farthest</string>
    <string name="Walkedthelongest">Walked the longest</string>
    <string name="Ranthefurthest">Ran the furthest</string>
    <string name="Ranthelongest">Ran the longest</string>
    <string name="WatchSettings">Watch Settings</string>
    <string name="IntelligentSleepAlarm">Alarm</string>
    <string name="IdleAlert">Idle Alert</string>
    <string name="nap">Nap</string>
    <string name="launch01">欢迎使用健康手表</string>
    <string name="launch02">开启您的健康之旅</string>
    <string name="launch03">Copyright@2016All Right Reserved</string>
    <string name="check_update">检查更新</string>
    <string name="watch_hardware_ver">手表固件版本</string>
    <string name="watch_num">手表序列号</string>
    <string name="app_ver">应用程序版本</string>
    <string name="notice1">1.更新前请确保手表与手机电量充足，并于更新过程中，请勿任意退出程序；</string>
    <string name="notice2">2.确保设备蓝牙已开启。</string>
    <string name="watch_battery">手表当前电量：</string>
    <string name="is_update">检查到新的固件版本，是否立即更新？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="q1">手表时间不准, 如何给手表校时?</string>
    <string name="q2">如何查找手表?</string>
    <string name="q3">更新固件和更换手表分别指什么?</string>
    <string name="q4">此款App可以连接其它品牌手表吗?</string>
    <string name="q5">如何判断手表蓝牙是否打开?以及如何开关蓝牙?</string>
    <string name="q1s1">第一步,进入智能校时界面</string>
    <string name="q1s1d">在APP主界面, 点击“智能校时”模块,进入到智能校时界面</string>
    <string name="q1s2">第二步,手表指针归“零”</string>
    <string name="q1s2d">在智能校时界面,先点击“重置”, 然后分别在APP上的表盘上调节时针、分针和小针，使手表上的时针和分针指向12点位置，小针指向0点位置</string>
    <string name="q1s2dd">（注：指针归“零”是指手表的指针归“零”， APP上表盘的指针只是用来调节手表指针位置）</string>
    <string name="q1s3">第三步，点击“同步”，手表校时完成</string>
    <string name="q1s3d">手表上时间和APP上表盘时间一致，为当前的互联网时间</string>
    <string name="q2s1">点击“设置” → “查找手表”</string>
    <string name="q2s2">点击”查找手表”后, 手表会震动,通过震动声来判断手表位置</string>
    <string name="q2s3">因蓝牙距离大约10米，建议查收手表时多走动</string>
    <string name="q3s1">1.更新固件是指更新手表里面的firmware，即更新手表内含的软件版本。</string>
    <string name="q3s11">每一款产品我们都会不断优化，使产品趋于完美</string>
    <string name="q3s2">2.更换手表是指更换另一支手表。 若您用APP连接过手表， 再去连接另外一支手表时， 点击更换手表，选取点击要连的手表，提示更换成功。</string>
    <string name="q4s1">此款APP “Hybrid Watch”是专门针对我司旗下智能手表（除GPS运动系列）研发的，目前只支持我司智能手表，暂时不支持其它手表。</string>
    <string name="q5s1">判断手表蓝牙是否打开有以下两种方法：</string>
    <string name="q5s11">1.打开APP(Hybrid Watch)和手表连接，若APP提示手表蓝牙没连接，则表示手表蓝牙是关着的。</string>
    <string name="q5s12">2.长按手表按键1秒钟，并有震动。</string>
    <string name="q5s13">若小针先指示“ON”后指示计步百分比，则表示蓝牙已打开。</string>
    <string name="q5s14">若小针先指示“闪电符号”后指示计步百分比，则表示蓝牙已关闭。</string>
    <string name="q5s2">开关蓝牙的方法：长按手表按键1秒钟，并有震动</string>
</resources>