<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
    <include
        layout="@layout/connection_title"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <LinearLayout
        android:id="@+id/q1"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/q1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#222222"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/q1s1"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q1s1d"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/q1s2"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q1s2d"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q1s2dd"
                android:textColor="#0e9edf"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/q1s3"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q1s3d"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/q2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/q2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#222222"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/q2s1"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q2s2"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q2s3"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/q3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/q3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#222222"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/q3s1"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q3s11"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/q3s2"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/q4"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/q4"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#222222"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/q4s1"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/q5"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/q5"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#222222"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/q5s1"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q5s11"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/q5s12"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/q5s13"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/q5s14"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/q5s2"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>