<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/page1_background"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text"
        android:layout_centerInParent="true"
        android:text="@string/launch01"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/start"
        android:layout_below="@+id/text"
        android:background="@drawable/page1_btn"
        android:layout_marginTop="50dp"
        android:text="@string/launch02"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_above="@+id/text"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/page1_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/launch03"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>