<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@drawable/mydialog"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:text="@string/is_update"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="80dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/blue_dialog"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/cancel"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <View
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/confirm"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>