<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#1b1b1b"
    android:orientation="vertical" android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:layout_height="match_parent">
    <include
        layout="@layout/connection_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <LinearLayout
        android:background="#222222"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/watch_hardware_ver"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/watch_ver"
                android:text="V1.0"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:background="#2c2c2c"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/watch_num"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/watch_num"
                android:text="123456789"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:background="#2c2c2c"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/app_ver"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/app_ver"
                android:text="1.0"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="35dp"
        android:text="@string/notice1"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/notice2"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/update"
        android:text="@string/check_update"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@drawable/page27_btn"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/watch_battery"
            android:textColor="#acacac"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/battery"
            android:text="92%"
            android:textColor="#acacac"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>